[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/abstract/Character.gd" type="Script" id=5]
[ext_resource path="res://Backpack/Backpack.tscn" type="PackedScene" id=25]

[sub_resource type="CircleShape2D" id=1]
radius = 87.946

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.8092
height = 11.7169

[node name="Character" type="KinematicBody2D" groups=["damageable"]]
z_index = 2
collision_mask = 3
script = ExtResource( 5 )

[node name="RightHand" type="Node2D" parent="."]
position = Vector2( 34.1337, 20.1651 )

[node name="InteractionArea" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="InteractionCollisionShape" type="CollisionShape2D" parent="InteractionArea"]
visible = false
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="FieldOfView" type="Area2D" parent="."]
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FieldOfView"]
visible = false
polygon = PoolVector2Array( 132, -150, 725, -331, 725, 331, 132, 150, -35, 24, -35, -24 )

[node name="Inventory" parent="." instance=ExtResource( 25 )]
Name = "Inventory"

[node name="Equipped" parent="." instance=ExtResource( 25 )]
Name = "equipped"
Width = 1
Height = 1

[connection signal="body_entered" from="FieldOfView" to="." method="_on_FieldOfView_body_entered"]
[connection signal="body_exited" from="FieldOfView" to="." method="_on_FieldOfView_body_exited"]
